--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -124,14 +124,14 @@
 
 @media screen and (max-width: 769px) {
     .login {
-        padding: 232px 0 0;
+        padding: 232px 0;
         margin: 0 50px;
     }
 }
 
 @media screen and (max-width: 431px) {
     .login {
-        padding: 56px 0 0;
+        padding: 56px 0;
         margin: 0 18px;
     }
 
