--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -121,14 +121,14 @@
 
 @media screen and (max-width: 769px) {
     .register {
-        padding: 232px 0 0;
+        padding: 232px 0;
         margin: 0 50px;
     }
 }
 
 @media screen and (max-width: 431px) {
     .register {
-        padding: 56px 0 0;
+        padding: 56px 0;
         margin: 0 18px;
     }
 
