--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -136,7 +136,7 @@
     font-size: 10px;
     font-weight: 400;
     color: #FF004D;
-    margin: 10px auto 0;
+    margin: 0;
     text-align: center;
 }
 
