--- a/src/components/MovieCard/MovieCard.css
+++ b/src/components/MovieCard/MovieCard.css
@@ -49,7 +49,7 @@
     background-position: center;
     border: none;
     height: 24px;
-    width: 24px;
+    min-width: 24px;
     padding: 0;
     margin: 0;
     border-radius: 36px;
