--- a/src/components/MovieList/MovieList.css
+++ b/src/components/MovieList/MovieList.css
@@ -12,6 +12,16 @@
     grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
 }
 
+.movies__error {
+    max-width: 1000px;
+    font-size: 26px;
+    font-weight: 500;
+    text-align: center;
+    margin: 100px auto 21px;
+    padding-bottom: 80px;
+    color: black;
+}
+
 .movies-card-list__more {
     height: 36px;
     margin: 50px 0 0;
